# pygeoapi

./: .gitignore  UV.md  environment.yaml  pygeoapi-config.yml  pygeoapi.spec  pyproject.toml  set_gdal_proj_env.py  setup-dev.bat  setup-dev.sh
.github/workflows/: build-bin.yml  vulnerabilities-test.yml  vulnerabilities.yml
pygeoapi/: __init__.py  api.py  flask_app.py  openapi.py  plugin.py
pygeoapi/api/: styles.py
pygeoapi/provider/: base.py  mapscript_.py  mapserver.py  wms_facade.py
pygeoapi/templates/collections/: style.html  styles.html
test-oamaps-data/: foo.sld
tests/styles/: bathing_water_sources.json  bathing_water_sources.sld
